+ Added new setting "FixCodeElements" in configuration file and new parameter "fixcodeformat:[0/1]" to control if [code] sections should be fixed
+ Added 2 new style classes for Title page "title_series" for series on title page and "title_authors" for authors on title page
+ Added display log function to GUI utility
+ Added display of settings file and log folder to the GUI utility About dialog
* Changed to generate truly Flat ePubs 
* Refactoring of the code to perform automatic internal relative paths resolving when constructing ePubs , instead of hard coded
* Replaced <strike> element with <del> element for better XHTML compatibility
* Fixed the bug with XGPT path not loaded in settings GUI
* Fixed shell extension converter sometimes does not convert all files when many files selected (COM interface marshaling between threads problem)


1.1.4
+ Added installer code to support configurations with and without embedding fonts
+ Added new option for command line utility "/cfg:<path>" to perform conversions using external configuration file
+ Added option to generate Apple file that allows Apple devices to use custom (embedded) fonts
+ Added code to store and load apple related settings
+ Added GUI to control Apple related settings
+ Added copyright notice text to "about" page
+ Added option to embed invisible license file (on by default when using converter)
+ Added some additional error handling for "settings" dialog in case no FB2EPUBExt.INI present in any of the paths
+ Added NGEN installation for better performance
+Added option to control if GUI window topmost or not
* Fixed installer problem on x86 systems downloading VCRedist x86 twice
* The shell extension no longer looks for a converter path, as it's a COM object now
* Returned registration of shell extension for 32 bit programs on 64 bit machine that was broken in prev. version